补UT， 解决sonar错误